# serializer version: 1
# name: test_pause_kafka
  _CallList([
    _Call(
      tuple(
        'annotate',
        'Kafka',
        'sasquatch',
        'strimzi.io/pause-reconciliation=true',
        '--namespace',
        'sasquatch',
        '--overwrite',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_release_service_ips
  _CallList([
    _Call(
      tuple(
        'get',
        'Service',
        '--field-selector',
        'spec.type=LoadBalancer',
        '-l',
        'argocd.argoproj.io/instance',
        '-o',
        'json',
        '--all-namespaces',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '-o',
        'json',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '-o',
        'json',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '-o',
        'json',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_release_service_ips.1
  _CallList([
    _Call(
      tuple(
        'annotate',
        'Service',
        'ingress-nginx-controller',
        'phalanx.lsst.org/previous-load-balancer-ip=35.225.112.77',
        '--namespace',
        'ingress-nginx',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--patch',
        '{"spec" : {"loadBalancerIP" : null }}',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--patch',
        '{"spec": {"type": "ClusterIP" } }',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--patch',
        '{"spec": {"type": "LoadBalancer" } }',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'wait',
        '--for=jsonpath={.status.loadBalancer.ingress}',
        'Service/ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--timeout',
        '5m',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_restore_service_ips
  _CallList([
    _Call(
      tuple(
        'get',
        'Service',
        '--field-selector',
        'spec.type=LoadBalancer',
        '-l',
        'argocd.argoproj.io/instance',
        '-o',
        'json',
        '--all-namespaces',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '-o',
        'json',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '-o',
        'json',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '-o',
        'json',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_restore_service_ips.1
  _CallList([
    _Call(
      tuple(
        'patch',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--patch',
        '{"spec":{"loadBalancerIP":"35.225.112.77"}}',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'Service',
        'ingress-nginx-controller',
        'phalanx.lsst.org/previous-load-balancer-ip-',
        '--namespace',
        'ingress-nginx',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--patch',
        '{"spec": {"type": "ClusterIP" } }',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--patch',
        '{"spec": {"type": "LoadBalancer" } }',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'wait',
        '--for=jsonpath={.status.loadBalancer.ingress}',
        'Service/ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--timeout',
        '5m',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_resume_crons
  _CallList([
    _Call(
      tuple(
        'patch',
        'CronJob',
        'gafaelfawr-maintenance',
        '--namespace',
        'gafaelfawr',
        '--patch',
        '{"spec" : {"suspend" : false }}',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'CronJob',
        'ook-ingest-lsst-texmf',
        '--namespace',
        'ook',
        '--patch',
        '{"spec" : {"suspend" : false }}',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_resume_kafka
  _CallList([
    _Call(
      tuple(
        'annotate',
        'Kafka',
        'sasquatch',
        'strimzi.io/pause-reconciliation-',
        '--namespace',
        'sasquatch',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_scale_down
  _CallList([
    _Call(
      tuple(
        'get',
        'Service',
        '--field-selector',
        'spec.type=LoadBalancer',
        '-l',
        'argocd.argoproj.io/instance',
        '-o',
        'json',
        '--all-namespaces',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '-o',
        'json',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '-o',
        'json',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '-o',
        'json',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'CronJob',
        '-l',
        'argocd.argoproj.io/instance',
        '-o',
        'json',
        '--all-namespaces',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'Deployment',
        '-l',
        'argocd.argoproj.io/instance',
        '-o',
        'json',
        '--all-namespaces',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'StatefulSet',
        '-l',
        'argocd.argoproj.io/instance',
        '-o',
        'json',
        '--all-namespaces',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_scale_down.1
  _CallList([
    _Call(
      tuple(
        'annotate',
        'Kafka',
        'sasquatch',
        'strimzi.io/pause-reconciliation=true',
        '--namespace',
        'sasquatch',
        '--overwrite',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'Service',
        'ingress-nginx-controller',
        'phalanx.lsst.org/previous-load-balancer-ip=35.225.112.77',
        '--namespace',
        'ingress-nginx',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--patch',
        '{"spec" : {"loadBalancerIP" : null }}',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--patch',
        '{"spec": {"type": "ClusterIP" } }',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--patch',
        '{"spec": {"type": "LoadBalancer" } }',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'wait',
        '--for=jsonpath={.status.loadBalancer.ingress}',
        'Service/ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--timeout',
        '5m',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'CronJob',
        'gafaelfawr-maintenance',
        '--namespace',
        'gafaelfawr',
        '--patch',
        '{"spec" : {"suspend" : true }}',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'CronJob',
        'ook-ingest-lsst-texmf',
        '--namespace',
        'ook',
        '--patch',
        '{"spec" : {"suspend" : true }}',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'Deployment',
        'gafaelfawr',
        'phalanx.lsst.org/previous-replica-count=1',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'scale',
        'Deployment/gafaelfawr',
        '--replicas',
        '0',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'Deployment',
        'gafaelfawr-operator',
        'phalanx.lsst.org/previous-replica-count=1',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'scale',
        'Deployment/gafaelfawr-operator',
        '--replicas',
        '0',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'StatefulSet',
        'gafaelfawr-redis',
        'phalanx.lsst.org/previous-replica-count=1',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'scale',
        'StatefulSet/gafaelfawr-redis',
        '--replicas',
        '0',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'StatefulSet',
        'gafaelfawr-redis-ephemeral',
        'phalanx.lsst.org/previous-replica-count=1',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'scale',
        'StatefulSet/gafaelfawr-redis-ephemeral',
        '--replicas',
        '0',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_scale_down_workloads
  _CallList([
    _Call(
      tuple(
        'get',
        'Deployment',
        '-l',
        'argocd.argoproj.io/instance',
        '-o',
        'json',
        '--all-namespaces',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'StatefulSet',
        '-l',
        'argocd.argoproj.io/instance',
        '-o',
        'json',
        '--all-namespaces',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_scale_down_workloads.1
  _CallList([
    _Call(
      tuple(
        'annotate',
        'Deployment',
        'gafaelfawr',
        'phalanx.lsst.org/previous-replica-count=1',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'scale',
        'Deployment/gafaelfawr',
        '--replicas',
        '0',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'Deployment',
        'gafaelfawr-operator',
        'phalanx.lsst.org/previous-replica-count=1',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'scale',
        'Deployment/gafaelfawr-operator',
        '--replicas',
        '0',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'StatefulSet',
        'gafaelfawr-redis',
        'phalanx.lsst.org/previous-replica-count=1',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'scale',
        'StatefulSet/gafaelfawr-redis',
        '--replicas',
        '0',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'StatefulSet',
        'gafaelfawr-redis-ephemeral',
        'phalanx.lsst.org/previous-replica-count=1',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'scale',
        'StatefulSet/gafaelfawr-redis-ephemeral',
        '--replicas',
        '0',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_scale_up
  _CallList([
    _Call(
      tuple(
        'get',
        'Service',
        '--field-selector',
        'spec.type=LoadBalancer',
        '-l',
        'argocd.argoproj.io/instance',
        '-o',
        'json',
        '--all-namespaces',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '-o',
        'json',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '-o',
        'json',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '-o',
        'json',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'Deployment',
        '-l',
        'argocd.argoproj.io/instance',
        '-o',
        'json',
        '--all-namespaces',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'StatefulSet',
        '-l',
        'argocd.argoproj.io/instance',
        '-o',
        'json',
        '--all-namespaces',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'CronJob',
        '-l',
        'argocd.argoproj.io/instance',
        '-o',
        'json',
        '--all-namespaces',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_scale_up.1
  _CallList([
    _Call(
      tuple(
        'annotate',
        'Kafka',
        'sasquatch',
        'strimzi.io/pause-reconciliation-',
        '--namespace',
        'sasquatch',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--patch',
        '{"spec":{"loadBalancerIP":"35.225.112.77"}}',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'Service',
        'ingress-nginx-controller',
        'phalanx.lsst.org/previous-load-balancer-ip-',
        '--namespace',
        'ingress-nginx',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--patch',
        '{"spec": {"type": "ClusterIP" } }',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'Service',
        'ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--patch',
        '{"spec": {"type": "LoadBalancer" } }',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'wait',
        '--for=jsonpath={.status.loadBalancer.ingress}',
        'Service/ingress-nginx-controller',
        '--namespace',
        'ingress-nginx',
        '--timeout',
        '5m',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'scale',
        'Deployment/gafaelfawr',
        '--replicas',
        '1',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'Deployment',
        'gafaelfawr',
        'phalanx.lsst.org/previous-replica-count-',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'scale',
        'Deployment/gafaelfawr-operator',
        '--replicas',
        '2',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'Deployment',
        'gafaelfawr-operator',
        'phalanx.lsst.org/previous-replica-count-',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'scale',
        'StatefulSet/gafaelfawr-redis',
        '--replicas',
        '4',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'StatefulSet',
        'gafaelfawr-redis',
        'phalanx.lsst.org/previous-replica-count-',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'scale',
        'StatefulSet/gafaelfawr-redis-ephemeral',
        '--replicas',
        '5',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'StatefulSet',
        'gafaelfawr-redis-ephemeral',
        'phalanx.lsst.org/previous-replica-count-',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'CronJob',
        'gafaelfawr-maintenance',
        '--namespace',
        'gafaelfawr',
        '--patch',
        '{"spec" : {"suspend" : false }}',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'CronJob',
        'ook-ingest-lsst-texmf',
        '--namespace',
        'ook',
        '--patch',
        '{"spec" : {"suspend" : false }}',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_scale_up_workloads
  _CallList([
    _Call(
      tuple(
        'get',
        'Deployment',
        '-l',
        'argocd.argoproj.io/instance',
        '-o',
        'json',
        '--all-namespaces',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'get',
        'StatefulSet',
        '-l',
        'argocd.argoproj.io/instance',
        '-o',
        'json',
        '--all-namespaces',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_scale_up_workloads.1
  _CallList([
    _Call(
      tuple(
        'scale',
        'Deployment/gafaelfawr',
        '--replicas',
        '1',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'Deployment',
        'gafaelfawr',
        'phalanx.lsst.org/previous-replica-count-',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'scale',
        'Deployment/gafaelfawr-operator',
        '--replicas',
        '2',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'Deployment',
        'gafaelfawr-operator',
        'phalanx.lsst.org/previous-replica-count-',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'scale',
        'StatefulSet/gafaelfawr-redis',
        '--replicas',
        '4',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'StatefulSet',
        'gafaelfawr-redis',
        'phalanx.lsst.org/previous-replica-count-',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'scale',
        'StatefulSet/gafaelfawr-redis-ephemeral',
        '--replicas',
        '5',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'annotate',
        'StatefulSet',
        'gafaelfawr-redis-ephemeral',
        'phalanx.lsst.org/previous-replica-count-',
        '--namespace',
        'gafaelfawr',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_suspend_crons
  _CallList([
    _Call(
      tuple(
        'patch',
        'CronJob',
        'gafaelfawr-maintenance',
        '--namespace',
        'gafaelfawr',
        '--patch',
        '{"spec" : {"suspend" : true }}',
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        'patch',
        'CronJob',
        'ook-ingest-lsst-texmf',
        '--namespace',
        'ook',
        '--patch',
        '{"spec" : {"suspend" : true }}',
      ),
      dict({
      }),
    ),
  ])
# ---
